updated Home section content

--- a/src/languages/locale/arabic/home.json
+++ b/src/languages/locale/arabic/home.json
@@ -22,10 +22,10 @@
         "greeting": "مرحباً، هذا أنا",
         "myname": "مصطفى صالح",
         "andima": "وأنا",
-        "spancontent1": "خريج حديث من هندسة الحاسبات والتحكم",
-        "spancontent2": "مهتم بهندسة الشبكات والهندسة السحابية",
-        "spancontent3": "أدرس حاليًا CCNP Enterprise",
-        "pcontent": ".خريج حديث متخصص في هندسة الحاسبات والتحكم، ومهتم بهندسة الشبكات والسحابة وجميع التقنيات المرتبطة بها",
+        "spancontent1": "خريج هندسة الحاسبات والتحكم",
+        "spancontent2": "مهتم بهندسة الشبكات والهندسة السحابية والبنية التحتية",
+        "spancontent3": "أدرس حاليًا CCNP ENARSI",
+        "pcontent": "خريج هندسة حاسبات متحمس للغاية. يبحث عن دور ديناميكي في هندسة الشبكات يوفر فرصًا للنمو والتعلم المستمر والتعاون. تشمل اهتماماتي الرئيسية بنية تكنولوجيا المعلومات والبنية التحتية، هندسة الشبكات والحوسبة السحابية، إدارة الأنظمة، البروتوكولات وأمن الشبكات",
         "facebook": "فيسبوك",
         "instagram": "انستجرام",
         "linkedin": "لينكد ان",
