--- a/src/languages/locale/english/home.json
+++ b/src/languages/locale/english/home.json
@@ -23,10 +23,10 @@
         "greeting": "Hello, It's me",
         "myname": "Mostafa Saleh",
         "andima": "And I'm",
-        "spancontent1": "A Fresh Graduate of Computer and Control Engineering",
-        "spancontent2": "Interested in Network Engineering and Cloud Engineering",
-        "spancontent3": "Currently studying CCNP Enterprise",
-        "pcontent": "A fresh graduate of computer and control engineering department who is passionate about network and cloud engineering and all their related technology.",
+        "spancontent1": "Computer and control Engineering Graduate.",
+        "spancontent2": "Interested in Cloud Network Engineering and Infrastructure.",
+        "spancontent3": "Currently studying CCNP ENARSI.",
+        "pcontent": "Highly-motivated Computer Engineering graduate. Seeking a dynamic role in Network Engineering that provides opportunities for growth, continuous learning, and collaboration. My key interests include IT Infrastructure, Network & Cloud Architecture, System Administration, Protocols, and Network Security.",
         "facebook": "Facebook",
         "instagram": "Instagram",
         "linkedin": "LinkedIn",
