--- a/src/languages/locale/russian/home.json
+++ b/src/languages/locale/russian/home.json
@@ -22,10 +22,10 @@
     "greeting": "Здравствуйте, это я",
     "myname": "Мостафа Салех",
     "andima": "И Я",
-    "spancontent1": "Свежий выпускник факультета вычислительной техники и систем управления",
-    "spancontent2": "Интересуетесь сетевой инженерией и облачной инженерией",
-    "spancontent3": "В настоящее время изучает CCNP Enterprise",
-    "pcontent": "Свежий выпускник факультета вычислительной техники и систем управления, который увлечен сетевым и облачным проектированием и всеми связанными с ними технологиями.",
+    "spancontent1": "Выпускник факультета компьютерного и управляющего инжиниринга.",
+    "spancontent2": "Интересуется облачной сетевой инженерией и инфраструктурой.",
+    "spancontent3": "В настоящее время изучает CCNP ENARSI.",
+    "pcontent": "Целеустремленный выпускник инженерного факультета. Ищет динамичную роль в сетевом инжиниринге, которая предоставляет возможности для роста, постоянного обучения и сотрудничества. Мои ключевые интересы включают ИТ-инфраструктуру, сетевую и облачную архитектуру, администрирование систем, протоколы и сетевую безопасность.",
     "facebook": "Facebook",
     "instagram": "Instagram",
     "linkedin": "LinkedIn",
